appId: ${APP_ID}
---
- clearState
- launchApp
- assertVisible: Crop Doctor
- assertVisible: "Let's Get Started "
- tapOn: "Let's Get Started "
- assertVisible: Sign In

